# arm-cmake-toolchains

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake  clang_utils.cmake  scan-build.cmake  utils.cmake
.github/: FUNDING.yml
.github/workflows/: build.yml
ci/: script.sh
examples/efm32/: gecko.cmake
examples/efm32/led/: CMakeLists.txt  README.md  efm32gg.ld  main.c
examples/nxp/led/: CMakeLists.txt  README.md  k64f.ld  main.c  startup.c  system.c  system.h
helpers/: GetGitVersion.cmake
